Setup from Jekyll template.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,7 @@
 		<link href="{{ 'assets/reset.css' | relative_url }}" rel="stylesheet">
 		<link href="{{ 'assets/style.css' | relative_url }}" rel="stylesheet">
 	</head>
-	<body class="{{ page.layout }}">
-		{% include navigation.html %}
+	<body>
 		{{ content }}
 	</body>
 </html>
