--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,2 +1,17 @@
 ---
 ---
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&family=IBM+Plex+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+body {
+	font-family: 'IBM Plex Sans', sans-serif;
+	font-size: 16px;
+	padding: 4em 2em 50vh;
+}
+
+h1 {
+	font-size: 4em;
+	font-weight: bold;
+}
