CSS variable examples.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,6 @@
 	</head>
 	<body>
 		{{ content }}
+		<a id="source-link" href="https://github.com/typography-and-interaction-too/other-stuff">See the source code</a>
 	</body>
 </html>
